--- a/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/navigation-multilevel/navigation-multilevel.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/navigation-multilevel/navigation-multilevel.scss
@@ -15,6 +15,7 @@
 
             @include helper-breakpoint-media-min($xl) {
                 flex-direction: row;
+                align-items: center;
                 gap: var(--scale-24);
             }
         }
@@ -32,7 +33,9 @@
         }
 
         .menu__item--has-children-dropdown .menu__trigger--lvl-0 {
-            display: none;
+            @include helper-breakpoint-media-max($xl - 1) {
+                display: none;
+            }
         }
 
         .menu__link--lvl-0 {
